--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
+    "@firebase/auth": "^1.8.0",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-picker/picker": "^2.9.0",
@@ -21,8 +22,10 @@
     "axios": "^1.7.7",
     "expo": "^51.0.38",
     "expo-blur": "~13.0.2",
+    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^11.0.1",
     "immer": "^10.1.1",
     "lottie-react-native": "^7.0.0",
     "picker": "^0.1.4",
