--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "react-native": "0.74.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^3.35.0",
+    "react-native-screens": "^4.1.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.12.3",
+    "react-navigation": "^5.0.0",
+    "react-navigation-stack": "^2.10.4",
     "typescript": "~5.3.3",
     "zustand": "^5.0.1"
   },
